--- a/GatewayProject/Assets/CSS/style.css
+++ b/GatewayProject/Assets/CSS/style.css
@@ -299,13 +299,14 @@ input[type="submit"]:hover {
   clear: both;
 }
 
-/* .tokyo_map{
-  width=500px 
-  height=650px
-  frameborder=0px 
-  style-border:0
-} */
+.tokyo_map{
+  width:500px; 
+  height:650px;
 
+}
+.social-media{
+  text-decoration: none;
+}
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .column4,
